update desktop normal size

--- a/HTML/Desktopcategory.html
+++ b/HTML/Desktopcategory.html
@@ -239,19 +239,19 @@
                 <div class="carousel-item active">
                     <div class="card-wrapper container-sm d-flex  justify-content-around">
                         <div class="cards-items-wish">
-                            <div class="card  padding-inner" style="width: 36rem;">
+                            <div class="card  padding-inner" >
                                 <img src="/Images/category1 1.jpg" alt="...">
                                 <button class="shop-category-button">The Trainer</button>
                             </div>
                         </div>
                         <div class="cards-items-wish">
-                            <div class="card  padding-inner" style="width: 36rem;">
+                            <div class="card  padding-inner" >
                                 <img src="/Images/category4 1.jpg" alt="...">
                                 <button class="shop-category-button">The Service Boot</button>
                             </div>
                         </div>
                         <div class="cards-items-wish">
-                            <div class="card  padding-inner" style="width: 36rem;">
+                            <div class="card  padding-inner" >
                                 <img src="/Images/category3 1.jpg" alt="...">
                                 <button class="shop-category-button">The Dress Sneaker</button>
                             </div>
@@ -262,16 +262,16 @@
                 <div class="carousel-item">
                     <div class="card-wrapper container-sm d-flex  justify-content-around">
                         <div class="cards-items-wish">
-                            <div class="card  padding-inner" style="width: 36rem;">
+                            <div class="card  padding-inner" >
                                 <img src="/Images/category1 1.jpg" alt="...">
                                 <button class="shop-category-button">The Service Boot</button>
                             </div>
                         </div>
-                        <div class="card  padding-inner" style="width: 37rem;">
-                            <img src="/Images/category2 1.jpg" alt="...">
+                        <div class="card  padding-inner" >
+                            <img src="/Images/category4 1.jpg" alt="...">
                             <button class="shop-category-button">The Loafer</button>
                         </div>
-                        <div class="card  padding-inner" style="width: 37rem;">
+                        <div class="card  padding-inner" >
                             <img src="/Images/category3 1.jpg" alt="...">
                             <button class="shop-category-button">The Service Boot</button>
                         </div>
