--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/CSS/signup.css">
+    <link rel="stylesheet" href="/CSS/responsive_css/respo-signup.css">
     <title>Sign UP</title>
 </head>
 
