--- a/HTML/login.html
+++ b/HTML/login.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/CSS/login.css">
+  <link rel="stylesheet" href="/CSS/responsive_css/respo-login.css">
   <title>Login</title>
 </head>
 
@@ -56,16 +57,11 @@
         <button type="submit">Login</button>
       </form>
       <div class="enline-div">
-        <div style="float: left;
-    margin-top: 12px;
-    margin-right: 10px;
-    width: 44%;">
+        <div class="enline-div-2">
           <hr />
         </div>
         <span class="end-line"> OR </span>
-        <div style="float: right;
-    margin-top: 12px;
-    width: 46%;">
+        <div class="end-line-2">
           <hr />
         </div>
       </div>
