--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -24,25 +24,25 @@
             <h2 style="font-size: 35px;
         color: #565656;
         text-align: center;">SignUp</h2>
-            <form action="/action_page.php" method="post">
+            <form id="signupForm">
 
                 <div class="container">
                     <div class="username-div">
                         <label for="uname">Username</label>
                         <div class="username-icon">
-                            <input type="text" placeholder="Enter Your Username" name="uname" required>
+                            <input type="text" placeholder="Enter Your Username" id="uname" required>
                         </div>
                     </div>
                     <div class="username-div">
                         <label for="fname">Firstname</label>
                         <div class="username-icon">
-                            <input type="text" placeholder="Enter Your first name" name="fname" required>
+                            <input type="text" placeholder="Enter Your first name" id="fname" required>
                         </div>
                     </div>
                     <div class="username-div">
                         <label for="lname">Lastname</label>
                         <div class="username-icon">
-                            <input type="text" placeholder="Enter Your last name" name="lname" required>
+                            <input type="text" placeholder="Enter Your last name" id="lname" required>
                         </div>
                     </div>
 
@@ -50,7 +50,7 @@
                     <div class="username-div">
                         <label for="psw" style="padding-top: 1rem;">Password</label>
                         <div class="username-icon">
-                            <input type="password" placeholder="Enter your password" name="psw" required>
+                            <input type="password" placeholder="Enter your password" id="psw" required>
                             <span class="fa-solid fa-eye-slash"></span>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                     <div class="username-div">
                         <label for="psw-r" style="padding-top: 1rem;">Password</label>
                         <div class="username-icon">
-                            <input type="password" placeholder="Re-type your password" name="psw-r" required>
+                            <input type="password" placeholder="Re-type your password" id="psw-r" required>
                             <span class="fa-solid fa-eye-slash"></span>
                         </div>
                     </div>
@@ -80,8 +80,9 @@
                 color: #6C6C6C;
                 font-size: 24px;">I'm already a member</a></div>
         </div>
-
     </section>
+
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 <script src="/JS/detabase.js"></script>
 </body>
 
