--- a/HTML/login.html
+++ b/HTML/login.html
@@ -24,21 +24,21 @@
       <h2 style="font-size: 35px;
         color: #565656;
         text-align: center;">Login</h2>
-      <form action="/action_page.php" method="post">
+     
 
 
         <div class="container">
           <div class="username-div">
             <label for="uname"><b>Username</b></label>
             <div class="username-icon">
-              <input type="text" placeholder="aviral87@icloud.com" name="uname" required>
+              <input type="text" placeholder="aviral87@icloud.com" id="uname" name="uname" required>
               <span class="fa-regular fa-envelope"></span>
             </div>
           </div>
           <div class="username-div">
             <label for="psw" style="padding-top: 1rem;"><b>Password</b></label>
             <div class="username-icon">
-              <input type="password" placeholder="Password" name="psw" required>
+              <input type="password" placeholder="Password" id="psw" name="psw" required>
               <span class="fa-solid fa-eye-slash"></span>
             </div>
           </div>
@@ -54,8 +54,8 @@
           </label>
           <span class="psw">Forgot <a href="#" style="color: #9A9797; text-decoration: none;">password?</a></span>
         </div>
-        <button type="submit">Login</button>
-      </form>
+        <button type="submit" id="login">Login</button>
+      
       <div class="enline-div">
         <div class="enline-div-2">
           <hr />
@@ -89,7 +89,7 @@
 
 
   </section>
-
+<script type="module" src="/JS/login.js"></script>
 </body>
 
 </html>
