--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -51,7 +51,7 @@
                         <label for="psw" style="padding-top: 1rem;">Password</label>
                         <div class="username-icon">
                             <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Enter your password" id="psw" required>
-                            <span class="fa-solid fa-eye-slash" onclick="myFunctionps1()"></span>
+                            <span class="fa-solid fa-eye-slash" id="password-show"></span>
                         </div>
                         <div id="message">
                             <h3>Password must contain the following:</h3>
@@ -66,7 +66,7 @@
                         <label for="psw-r" style="padding-top: 1rem;">Password</label>
                         <div class="username-icon">
                             <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Re-type your password" id="psw-r" required>
-                            <span class="fa-solid fa-eye-slash" onclick="myFunctionps2()"></span>
+                            <span class="fa-solid fa-eye-slash" id="password-show2"></span>
                         </div>
                     </div>
 
