--- a/HTML/login.html
+++ b/HTML/login.html
@@ -39,7 +39,7 @@
             <label for="psw" style="padding-top: 1rem;"><b>Password</b></label>
             <div class="username-icon">
               <input type="password" placeholder="Password" id="psw" name="psw" required>
-              <span class="fa-solid fa-eye-slash"></span>
+              <span class="fa-solid fa-eye-slash" id="password-show"></span>
             </div>
           </div>
 
