--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="/JS/index.js"></script>
   <script src="/JS/wishlist.js"></script>
+  <script type="module" src="/JS/login.js"></script>
 </body>
 
 </html>
