sign in with gooogle

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -89,6 +89,7 @@
 
 
   </section>
+  <script type="module" src="https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"></script>
 <script type="module" src="/JS/login.js"></script>
 </body>
 
