--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
               </li>
               <li>
                 <a href="/HTML/login.html">SignUp / Login<i class="fa-solid fa-user fafaitem-space"></i></a>
+                <a id="logout-btn" style="display: none
+                ;">Logout<i class="fa-solid fa-user fafaitem-space"></i></a>
               </li>
             </span>
           </ul>
