--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
                 <a href="/HTML/wishlist.html">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
               </li>
               <li>
-                <a href="/HTML/login.html">SignUp / Login<i class="fa-solid fa-user fafaitem-space"></i></a>
-                <a id="logout-btn" style="display: none
-                ;">Logout<i class="fa-solid fa-user fafaitem-space"></i></a>
+                <button id="logout-btn"  style="background-color: transparent; border: none; ">Logout<i class="fa-solid fa-user fafaitem-space"></i></button>
               </li>
             </span>
           </ul>
@@ -510,6 +508,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="/JS/index.js"></script>
   <script src="/JS/wishlist.js"></script>
+  <script type="module" src="/jS/logout.js"></script>
   <script type="module" src="/JS/login.js"></script>
 </body>
 
