--- a/HTML/login.html
+++ b/HTML/login.html
@@ -71,7 +71,7 @@
     font-weight: 700;
     margin-top: 2rem;">Sign Up Using</h3>
       <div class="social-icon">
-        <button class="sign-in-with-fb">Continue With Facebook</button>
+        <button class="sign-in-with-fb" id="signin-with-facebook">Continue With Facebook</button>
         <span class="fa-brands fa-facebook"></span>
       </div>
       <div class="social-icon-1">
